# LogSquirl-Logcat

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md  plugin.json  releases.json
.github/workflows/: ci-build.yml  ci-release.yml
docs/: DEVELOPER_GUIDE.md
src/: adbprocess.cpp  adbprocess.h  devicewidget.cpp  devicewidget.h  newsessionwidget.cpp  newsessionwidget.h  plugin.cpp  plugin.h  sidebarwidget.cpp  sidebarwidget.h
tests/: CMakeLists.txt  adbprocess_test.cpp  parsedevicelist_test.cpp  plugininfo_test.cpp  tests_main.cpp
